[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Workspace/Points/Point.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]

[node name="Point" type="Position2D"]
script = ExtResource( 1 )

[node name="MouseArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MouseArea"]
shape = SubResource( 1 )
[connection signal="mouse_entered" from="MouseArea" to="." method="_on_MouseArea_mouse_entered"]
[connection signal="mouse_exited" from="MouseArea" to="." method="_on_MouseArea_mouse_exited"]
